# s3dedup

./: Cargo.toml  config.json
.github/workflows/: format.yaml
src/: config.rs  logging.rs  main.rs
src/kvstorage/: mod.rs  pooled.rs  postgres.rs  redis.rs  sqlite.rs
src/locks/: memory.rs  mod.rs
src/routes/: mod.rs  put_file.rs
src/routes/ft/: mod.rs  put_file.rs  utils.rs  version.rs
